--- a/Halal-App/app/src/main/res/layout/fragment_explanation.xml
+++ b/Halal-App/app/src/main/res/layout/fragment_explanation.xml
@@ -14,8 +14,8 @@
     </data>
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="398dp"
+        android:layout_height="790dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,8 +23,8 @@
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_width="392dp"
+                android:layout_height="1035dp">
 
                 <TextView
                     android:id="@+id/whatIsHalal"
@@ -43,22 +43,20 @@
                     android:id="@+id/halalLogo"
                     android:layout_width="54dp"
                     android:layout_height="49dp"
-                    android:layout_marginStart="341dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="40dp"
+                    android:layout_marginStart="80dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="60dp"
                     android:contentDescription="@string/desc"
                     android:src="@drawable/halal_logo"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.583"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/whatIsHalal"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/mainExplanation"
-                    android:layout_width="355dp"
-                    android:layout_height="738dp"
-                    android:layout_marginTop="28dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_width="345dp"
+                    android:layout_height="636dp"
+                    android:layout_marginTop="16dp"
                     android:justificationMode="inter_word"
                     android:paddingStart="20dp"
                     android:paddingEnd="20dp"
@@ -66,7 +64,7 @@
                     android:text="@string/explanation_halalpro"
                     android:textColor="#000000"
                     android:textSize="15sp"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/halalLogo"
                     app:layout_constraintStart_toStartOf="@+id/whatIsHalal"
                     app:layout_constraintTop_toBottomOf="@+id/halalLogo" />
 
@@ -107,9 +105,9 @@
                     android:layout_marginTop="10dp"
                     android:paddingStart="20dp"
                     android:paddingEnd="20dp"
-                    android:visibility="gone"
                     android:text="@string/the_rest"
                     android:textColor="#000000"
+                    android:visibility="gone"
                     app:layout_constraintStart_toStartOf="@+id/secondDefinition"
                     app:layout_constraintTop_toBottomOf="@+id/secondDefinition" />
 
@@ -117,7 +115,7 @@
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="60dp"
                     android:layout_marginEnd="110dp"
                     android:text="@string/listofharams"
                     android:textSize="21sp"
@@ -129,15 +127,34 @@
 
                 <TextView
                     android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="346dp"
+                    android:layout_height="79dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="335dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="86dp"
                     android:text="@string/list"
+                    android:textColor="#000000"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/mainExplanation"
-                    app:layout_constraintTop_toBottomOf="@+id/textView" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView"
+                    app:layout_constraintVertical_bias="0.0" />
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="355dp"
+                    android:layout_height="58dp"
+                    android:paddingStart="10sp"
+                    android:paddingEnd="10sp"
+                    android:text="@string/source"
+                    android:textColor="#000000"
+                    android:textSize="11sp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView"
+                    app:layout_constraintEnd_toEndOf="@+id/mainExplanation"
+                    app:layout_constraintStart_toStartOf="@+id/mainExplanation"
+                    app:layout_constraintTop_toBottomOf="@+id/mainExplanation" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
