--- a/Halal-App/app/src/main/res/layout/fragment_manual.xml
+++ b/Halal-App/app/src/main/res/layout/fragment_manual.xml
@@ -32,11 +32,16 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
+                    android:layout_marginStart="60dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginEnd="189dp"
+                    android:layout_marginBottom="351dp"
                     android:text="@string/how_to_use_this_app"
+                    android:textColor="#000000"
                     android:textSize="23sp"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="50dp"
                     android:background="#4CAF50"
-                    android:text="-> Check Prayer Times"
+                    android:text="@string/check_prayer_times"
                     android:textColor="#FFFFFF"
                     android:textSize="19sp"
                     android:textStyle="bold"
@@ -55,12 +60,13 @@
 
                 <TextView
                     android:id="@+id/prayerTimesManual"
-                    android:layout_width="365dp"
-                    android:layout_height="76dp"
+                    android:layout_width="367dp"
+                    android:layout_height="53dp"
                     android:layout_marginTop="5dp"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="20dp"
                     android:text="@string/prayer_time_manual"
                     android:textColor="#000000"
-                    android:paddingEnd="20dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@+id/textView5"
                     app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -71,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:background="#4CAF50"
-                    android:text="-> Check Products"
+                    android:text="@string/check_products"
                     android:textColor="#FFFFFF"
                     android:textSize="19sp"
                     android:textStyle="bold"
@@ -80,11 +86,12 @@
 
                 <TextView
                     android:id="@+id/checkProductsManual"
-                    android:layout_width="363dp"
-                    android:layout_height="101dp"
+                    android:layout_width="362dp"
+                    android:layout_height="74dp"
                     android:layout_marginTop="5dp"
+                    android:paddingStart="20dp"
                     android:paddingEnd="20dp"
-                    android:text="Click the Drawer Symbol > Choose the Product Check > Insert EAN Code of the product OR Use the Camera Scanner to scan the barcode of the product"
+                    android:text="@string/click_the_drawer_symbol_choose_the_product_check_insert_ean_code_of_the_product_or_use_the_camera_scanner_to_scan_the_barcode_of_the_product"
                     android:textColor="#000000"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@+id/textView7"
@@ -96,7 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:background="#4CAF50"
-                    android:text="-> About Halal Products"
+                    android:text="@string/halal_products_about"
                     android:textColor="#FFFFFF"
                     android:textSize="19sp"
                     android:textStyle="bold"
@@ -107,9 +114,10 @@
 
                 <TextView
                     android:id="@+id/showHalalDefinitionManual"
-                    android:layout_width="360dp"
-                    android:layout_height="56dp"
+                    android:layout_width="362dp"
+                    android:layout_height="42dp"
                     android:layout_marginTop="5dp"
+                    android:paddingStart="20dp"
                     android:paddingEnd="20dp"
                     android:text="@string/about_halal_products"
                     android:textColor="#000000"
